--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -154,15 +154,15 @@
     </footer>
     <script src="static/index.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-9VK0B43EQ3"></script> -->
-    <!-- <script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9VK0B43EQ3"></script>
+    <script>
     window.dataLayer = window.dataLayer || [];
 
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-9VK0B43EQ3');
-    </script> -->
+    </script>
 </body>
 
 </html>
