--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -154,7 +154,7 @@
     </footer>
     <script src="static/index.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9VK0B43EQ3"></script>
+    <script async src="./index.js"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
 
