--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -11,10 +11,10 @@
     <meta name="keywords" content="免费的ss、ssr、vmess、torjan节点">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <!-- <link rel="stylesheet" type="text/css" href="css/client/metron-icon.css" /> -->
-    <link rel="stylesheet" type="text/css" href="./metron-icon.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/sansui233/proxypool-fe/css/client/metron-icon.css" />
     <!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
-    <link rel="stylesheet" type="text/css" href="./index.css">
-    <script src="./jquery.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/sansui233/proxypool-fe/css/index.css">
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
 </head>
 
 <body>
@@ -145,16 +145,16 @@
     </div>
     <footer class="footer has-text-centered">
         <!-- 所有使用本代码提供服务的禁止删除、修改版权信息 -->
-        <p>欢迎关注tg频道：<a href="https://t.me/officemcG">@officemcG</a></p>
-        <p>抓取程序已开源：<a href="https://github.com/gffice/runproxypool">gffice/runproxypool</a></p>
-        <p>本程序为fork版：<a href="https://github.com/gffice/runproxypool">gffice/runproxypool</a></p>
-        <p>修改版：<a href="https://github.com/gffice/runproxypool">gffice/runproxypool</a><br>{{ .version }}</p>
+        <p>欢迎关注tg频道：<a href="https://t.me/peekfun">@peekfun</a></p>
+        <p>抓取程序已开源：<a href="https://github.com/zu1k/proxypool">zu1k/proxypool</a></p>
+        <p>本程序为fork版：<a href="https://github.com/sansui233/proxypool">sansui233/proxypool</a></p>
+        <p>修改版：<a href="https://github.com/ssrlive/proxypool">ssrlive/proxypool</a><br>{{ .version }}</p>
         <br>
-        <p><b>Theme</b>&nbspby&nbsp<a href="https://github.com/gffice/" class="has-text-primary"><b>gffice</b></a> Powered&nbspby&nbsp<b>Bulma</b></p>
+        <p><b>Theme</b>&nbspby&nbsp<a href="https://github.com/sansui233/" class="has-text-primary"><b>Sansui233</b></a> Powered&nbspby&nbsp<b>Bulma</b></p>
     </footer>
     <script src="static/index.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="./index.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9VK0B43EQ3"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
 
